# la-synth-se-de-textures

./: .gitignore  CMakeLists.txt  CoupeOptimale.cpp  CoupeOptimale.h  README.md  descripteur_tache.h  main_testpermut.cpp  main_tp.cpp  permuteur.cpp  permuteur.h  raccordeur.h  raccordeurRecursifNaif.cpp  raccordeurRecursifNaif.h  raccordeur_iteratif.cpp  raccordeur_iteratif.h  raccordeur_recursif.cpp  raccordeur_recursif.h  raccordeur_simple.cpp  raccordeur_simple.h  testpermut  textureur.cpp  textureur.h  tp
